--- a/style.css
+++ b/style.css
@@ -1,14 +1,28 @@
 body {
   margin: 0;
 }
-.nav {
-  text-decoration: none;
-  padding-left: 20px;
-  padding-right: 20px;
-  font-weight: 700;
+
+nav li {
+  list-style: none;
+  padding: 5px 20px;
 }
-.navigation {
-  text-align: center;
+nav li a {
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  font-weight: 600;
+}
+nav li a:hover {
+  color: white;
+  background-color: rgb(74, 109, 5);
+}
+nav > ul {
+  display: flex;
+  padding-left: 330px;
+  background-color: blanchedalmond;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 0;
 }
 .top-part {
   background-color: bisque;
@@ -48,11 +62,10 @@ body {
   width: 100%;
   height: 290px;
 }
-.biriyani-image {
-  transition: 2s;
-}
-.biriyani-image:hover {
-  transform: scale(1.2);
+
+.biriyani-image:hover img {
+  transform: scale(1.3);
+  transition: transform 2s ease-in-out;
 }
 .biriyani {
   text-align: center;
@@ -69,5 +82,38 @@ body {
 .menu {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 200px;
+  padding-left: 50px;
+}
+.home-h1 {
+  color: blue;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 100px;
+}
+.form {
+  margin-left: 20px;
+}
+.order-menu {
+  text-decoration: none;
+  color: white;
+  background-color: rgb(37, 34, 34);
+  padding: 1px 15px;
+}
+.top-menu {
+  text-align: center;
+  margin-top: 70px;
+}
+.contact-h2 {
+  text-align: center;
+}
+.contact-h3 {
+  text-align: center;
+}
+main img {
+  margin-left: 350px;
+  border-radius: 100px;
+}
+.about {
+  text-align: centers;
 }
